VQ-3355: DESIGN IMPLEMENTATION -ADD,EDIT,DELETE REASONS FOR PENDING

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -3853,8 +3853,8 @@
                     <app-service-providers></app-service-providers>
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 12">
-                    <h5> {{'gis.policy.reasons_for_pending' | translate}}</h5>
-                    <p>Details about Reasons for pending...</p>
+                    <app-reasons-for-pending></app-reasons-for-pending>
+                    
                 </ng-container>
             </div>
         </div>
