--- a/src/app/features/fms/components/receipt/receipt.component.html
+++ b/src/app/features/fms/components/receipt/receipt.component.html
@@ -44,7 +44,7 @@
           </div>
 
           <!-- Exchange Rate Modal -->
-          <div class="modal fade" id="exchangeRateModal" tabindex="-1" role="dialog" aria-labelledby="exchangeRateLabel" aria-hidden="true">
+          <!-- <div class="modal fade" id="exchangeRateModal" tabindex="-1" role="dialog" aria-labelledby="exchangeRateLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -68,7 +68,52 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
+          <!-- Exchange Rate Modal -->
+<div
+class="modal fade"
+id="exchangeRateModal"
+tabindex="-1"
+role="dialog"
+aria-labelledby="exchangeRateLabel"
+aria-hidden="true"
+>
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exchangeRateLabel">Exchange Rate</h5>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="modal"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div *ngIf="useDefaultExchangeRate">
+        <p>1 {{ selectedCurrency }} = {{ exchangeRate }}</p>
+      </div>
+      <div *ngIf="!useDefaultExchangeRate">
+        <label for="exchangeRateInput">Enter Exchange Rate:</label>
+        <p>1 {{ selectedCurrency }} =</p>
+        <input
+          type="number"
+          id="exchangeRateInput"
+          placeholder="value in KES"
+          class="form-control"
+          formControlName="exchangeRate"
+        />
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary" (click)="confirmExchangeRate()">OK</button>
+    </div>
+  </div>
+</div>
+</div>
+
 
           <!-- Payment Mode Dropdown -->
           <div class="col-md-4">
@@ -420,6 +465,82 @@
               </ul>
             </div>
           </div>
+<!-- modal to allow user enter file description -->
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">file description</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Enter file description</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col-md-4">
+  <!-- Hidden file input -->
+  <input type="file" #fileInput (change)="onFileSelected($event)" multiple style="display: none;">
+
+  <!-- Upload File button -->
+  <button type="button" class="btn btn-primary" (click)="fileInput.click()">
+    {{ 'fms.receipting.uploadFiles' | translate }}
+  </button>
+</div>
+
+<div class="col-md-4">
+  <div class="form-group">
+    <ul>
+      <li *ngFor="let file of uploadedFiles; let i = index">
+        {{ file.name }}
+        <button type="button" class="btn btn-danger remove-document-button" 
+                (click)="onRemoveFile(i)" *ngIf="i !== -1">
+          Remove
+        </button>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div id="fileDescriptionModal" #fileDescriptionModal class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">File Description</h5>
+        <button type="button" class="close" (click)="closeModal()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="receiptingDetailsForm">
+          <div class="form-group">
+            <label for="description">Enter File Description</label>
+            <input id="description" type="text" class="form-control" formControlName="description" />
+            
+            <div *ngIf="receiptingDetailsForm.get('description')?.invalid && receiptingDetailsForm.get('description')?.touched" class="text-danger">
+              Description is required
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary"  (click)="saveFileDescription()">Save changes</button>
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
           <div class="col-md-4 p-0" *ngIf="orgCode === 'A=='">
             <div class="form-group position-relative">
@@ -437,27 +558,37 @@
           </div>
         </div>
 
-        <div class="text-dark mt-4 fs-5 fw-bold mb-3">Allocate Receipt Amount</div>
 
-        <!-- Account Type Section -->
+
+        <div class="text-dark mt-4 fs-5 fw-bold mb-3">Allocate Receipt Amount</div>
+<!-- Account Type Section -->
         <div class="row mt-3">
           <div class="col-md-4">
+            <div class="form-group position-relative">
             <label for="accountType" style="color: black;">Account Type:</label>
+            <div class="dropdown-container">
             <select
               id="accountType"
               formControlName="accountType"
               class="form-control"
               (change)="onAccountTypeChange()"
             >
-              <option value="">Select Account Type</option>
-              <option *ngFor="let type of accountTypes" [value]="type">{{ type.name }}</option>
-            </select>
-          </div>
+              <option value="">Select</option>
+              <option *ngFor="let type of accountTypes" [value]="type.name">{{ type.name }}</option>
 
+              <!-- <option *ngFor="let type of accountTypes" [value]="type">{{ type.name }}</option> -->
+             
+            </select>
+            <i class="pi pi-chevron-down dropdown-icon"></i>
+          </div>
+        </div>
+      </div>
           <!-- Search Criteria Section -->
           <div class="col-md-4">
-            <label for="searchCriteria" style="color: black;">Search Criteria:</label>
-            <select
+            <div class="form-group position-relative">
+                <label for="searchCriteria" style="color: black;">Search Criteria:</label>
+            <div class="dropdown-container">
+<select
               id="searchCriteria"
               formControlName="searchCriteria"
               class="form-control"
@@ -468,8 +599,14 @@
               <option value="debitNote">By Debit Note</option>
               <option value="clientName">By Client Name</option>
             </select>
+            <i class="pi pi-chevron-down dropdown-icon"></i>
           </div>
-
+        </div>
+      </div>
+      <div *ngIf="loading" class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      
           <!-- Search Query Input -->
           <div class="col-md-4">
             <label for="searchQuery" style="color: black;">Search:</label>
@@ -496,36 +633,69 @@
         </div>
 
         <!-- Search Results Table -->
-        <div class="row mt-3" *ngIf="searchClients.length > 0">
+        <div class="row mt-3" *ngIf="clients.length > 0">
           <div class="col-md-12">
-            <p-table [value]="searchClients" responsiveLayout="scroll" class="table-striped">
+            <p-table [value]="clients" responsiveLayout="scroll" class="table-striped"
+            selectionMode="single" 
+            [(selection)]="selectedClient"
+             dataKey="code">
               <ng-template pTemplate="header">
                 <tr>
-                  <th>Client Name</th>
-                  <th>Policy Number</th>
-                  <th>Account Number</th>
-                  <th>Amount</th>
-                  <th>Allocated Amount</th>
-                  <th>Actions</th>
+                  <th>desc</th>
+                  <th>Name</th>
+                  <th>Type</th>
+                
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-client let-i="rowIndex">
+                <tr [pSelectableRow]="client" (click) = onClickClient(client)>
+                   
+                  <td>{{ client.
+                    systemShortDesc
+                     }}</td>
+                  <td>{{ client.name}}</td>
+                  <td>{{ client.receiptType }}</td>
+                 
+                
+               
+                </tr>
+              </ng-template>
+            </p-table>
+          </div>
+        </div>
+
+       
+        <div class="row mt-3"  >
+          <div class="col-md-12">
+            <p-table [value]="transactions" responsiveLayout="scroll" class="table-striped"
+           >
+              <ng-template pTemplate="header">
                 <tr>
-                  <td>{{ client.clientName }}</td>
-                  <td>{{ client.policyNumber }}</td>
-                  <td>{{ client.accountNumber }}</td>
-                  <td>{{ client.amountInsured | currency }}</td>
-                  <td>
-                    <form [formGroup]="getAllocationGroup(i)">
+                  <th>narrations</th>
+                  <th>amount</th>
+                  <th>referenceNumber</th>
+                  <th>Allocated Amount</th>
+                
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-transaction let-i="rowIndex">
+                <tr [pSelectableRow]="transaction" >
+                   
+                  <td>{{ transaction.narrations
+                     }}</td>
+                  <td>{{ transaction.amount}}</td>
+                  <td>{{ transaction.referenceNumber }}</td>
+ <td>
+                    
                       <input
                         type="number"
                         formControlName="allocatedAmount"
                         class="form-control"
                         placeholder="Enter amount"
                       />
-                    </form>
+                    
                   </td>
-                  <td>
+                  <!-- <td>
                     <button
                       class="btn btn-primary"
                       (click)="addAllocation(client, i)"
@@ -533,7 +703,7 @@
                     >
                       Allocate
                     </button>
-                  </td>
+                  </td>  -->
                 </tr>
               </ng-template>
             </p-table>
@@ -541,7 +711,7 @@
         </div>
 
         <!-- Allocated Clients Table -->
-        <div class="row mt-3">
+        <!-- <div class="row mt-3">
           <div class="col-md-12">
             <p-table [value]="allocatedClients" responsiveLayout="scroll" class="table-striped">
               <ng-template pTemplate="header">
@@ -564,10 +734,10 @@
               </ng-template>
             </p-table>
           </div>
-        </div>
+        </div> -->
 
         <!-- Save Allocations Button -->
-        <div class="row mt-3">
+        <!-- <div class="row mt-3">
           <div class="col-md-12">
             <button
               type="button"
@@ -578,8 +748,7 @@
               Save Allocations
             </button>
           </div>
-        </div>
-
+        </div> -->
         <!-- Receipt Preview Modal -->
         <div class="modal fade" id="receiptPreviewModal" tabindex="-1" aria-labelledby="receiptPreviewModalLabel"
           aria-hidden="true">
